[gd_scene load_steps=3 format=3 uid="uid://c41owm30w7c7x"]

[ext_resource type="Script" path="res://Scripts/SpaceLevel/SoundFx.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://72o6c5rhk3go" path="res://Assets/Sounds/Fx/explosion-drop-6879.mp3" id="2_0xyy4"]

[node name="SoundFx" type="Node2D"]
script = ExtResource("1")

[node name="explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0xyy4")
volume_db = 15.0

[node name="ship_engines" type="AudioStreamPlayer2D" parent="."]
autoplay = true

[connection signal="tree_exited" from="." to="." method="_on_SoundFx_tree_exited"]
[connection signal="finished" from="explosion" to="." method="_on_explosion_finished"]
[connection signal="finished" from="ship_engines" to="." method="_on_ship_engines_finished"]
